server: handle invalid regex in dispatcher requirements